项目标题修改

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>远程诊断系统</title>
+    <title>数字钥匙管理平台</title>
     <link rel="icon" href="<%=APP_METADATA.baseUrl%>favicon.ico" type="image/x-icon">
     <% if(APP_METADATA.env==='test'){ %>
         <style type="text/css">
