--- a/src/pages/System/User/Roles/style.less
+++ b/src/pages/System/User/Roles/style.less
@@ -1,62 +1,32 @@
 @import '~@/styles/mixins';
 
-.roles {
+.navForm {
+  margin: @design-gutter;
+  border-radius: 5px;
+  overflow: hidden;
   :global {
-    .nav-bar {
-      margin: @design-gutter_large @design-gutter;
+    .form-label {
+      text-align: right;
     }
-    .grids {
-      .ant-card {
-        height: 150px;
-        position: relative;
-        margin-top: @design-gutter_large;
-      }
-      .ant-card-head {
-        border-bottom: 0;
-      }
-      .ant-card-extra {
-        font-size: 14px;
-        .count {
-          margin-right: @design-gutter;
+    .form-label,
+    .form-control {
+      height: 55px;
+      line-height: 55px;
+      padding: 0 @design-gutter;
+    }
+    .ant-radio-group {
+      .ant-radio-button-wrapper {
+        margin-right: @design-gutter_large;
+        border-radius: 4px;
+        border: 0;
+        &.ant-radio-button-wrapper-checked {
+          color: #fff;
+          background-color: #108ee9;
         }
-      }
-      .ant-card-body {
-        padding: 0;
-      }
-      .body {
-        padding: 0 24px;
-      }
-      .footer {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        padding: @design-gutter 24px;
-        background-color: #f4f4f4;
-        border-top: solid 1px #e9e9e9;
-        .links > a {
-          &:not(:last-child):after {
-            content: '|';
-            color: @light_grey;
-            margin: 0 5px;
-          }
-        }
-      }
-      .card-add {
-        text-align: center;
-        cursor: pointer;
-        .icon-add {
-          margin-top: 40px;
-          font-size: 62px;
-          color: @grey;
+        &:before {
+          display: none;
         }
       }
     }
-  }
-}
-
-.permissions-tree {
-  .menu-item-title .fa {
-    margin-right: 3px;
   }
 }
