--- a/src/components/GlobalLogo/index.less
+++ b/src/components/GlobalLogo/index.less
@@ -10,9 +10,9 @@
   overflow: hidden;
   .logoIcon {
     position: absolute;
-    left: 21px;
-    top: 18px;
-    height: 26px;
+    left: 50px;
+    //top: 5px;
+    height: 60px;
   }
   .logoName {
     position: absolute;
